--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, vel expedita? Facilis cumque pariatur voluptatem eveniet, ea itaque ducimus minus nihil repellendus veniam commodi id. Placeat provident ratione numquam aut?
                 </p>
             </div>
-            <img class="event__image" src="./images/crianca.jpg" alt="Front-end">
+            <img class="event__image" src="./images/crianca.jpg" style="width: 100%;" alt="Front-end">
         </div>
     </section>
     
